--- a/src/html/interviews/intrvw_ls01.html
+++ b/src/html/interviews/intrvw_ls01.html
@@ -30,11 +30,11 @@
     <body class="bg-white text-gray-700"
         onload="setParentElementHeight('interview-info'); imageHref('interview-image');">
         <header>
-            <include src="./partials/nav_header.html" locals='{"pathPrefix": "../", "active": "intrvw_dm01"}'></include>
+            <include src="./partials/nav.html" locals='{"pathPrefix": "../", "active": "intrvw_dm01"}'></include>
         </header>
 
         <!-- Main: -->
-        <main class="m-auto sm:w-full md:w-4/5">
+        <main class="m-auto">
             <div id="top-container" class="pt-6">
                 <!-- Macou1 -->
                 <div id="macou1" class="flex flex-row flex-wrap content-between">
