--- a/src/html/virtual-exhibits/ve2.html
+++ b/src/html/virtual-exhibits/ve2.html
@@ -8,12 +8,10 @@
 
     <body class="bg-white">
         <header>
-            <include src="./partials/nav_header.html" locals='{"pathPrefix": "../", "active": "yes"}'></include>
+            <include src="./partials/nav.html" locals='{"pathPrefix": "../", "active": "yes"}'></include>
         </header>
 
-        <main class="m-auto flex flex-col sm:w-full md:w-4/5 font-crimson-text font-semibold text-sm text-gray-900">
-            Virtual Exhibit 2
-
+        <main class="m-auto flex flex-col font-crimson-text font-semibold">
             <div class="flex h-[30rem]">
                 <div class="relative flex min-h-min basis-1/2 flex-col justify-center pr-1">
                     <span class="text-left pr-20">
