--- a/src/html/virtual-exhibits/ve4.html
+++ b/src/html/virtual-exhibits/ve4.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html>
+
     <head>
-        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - Virtual Exhibit 1"}' />
+        <include src="./partials/head.html"
+            locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - Virtual Exhibit 1"}' />
     </head>
 
     <body class="bg-white text-gray-700">
         <header>
-            <include src="./partials/nav_header.html" locals='{"pathPrefix": "../", "active": "yes"}'></include>
+            <include src="./partials/nav.html" locals='{"pathPrefix": "../", "active": "yes"}'></include>
         </header>
 
-        <main class="m-auto sm:w-full md:w-4/5">
+        <main class="m-auto">
             Virtual Exhibit 4
             <br />
             <a href="./ve2.html" alt="Virtual Exhibit 2">Next: Virtual Exhibit 2</a>
         </main>
     </body>
+
 </html>
