--- a/src/html/about.html
+++ b/src/html/about.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
+
     <head>
         <include src="./partials/head.html" locals='{"pathHeadPrefix": "../", "pageTitle": "Brotherland - Project"}' />
     </head>
 
     <body class="bg-white text-gray-700">
         <header>
-            <include src="./partials/nav_header.html" locals='{"pathPrefix": "./", "active": "about"}'></include>
+            <include src="./partials/nav.html" locals='{"pathPrefix": "./", "active": "about"}'></include>
         </header>
 
-        <main class="m-auto sm:w-full md:w-4/5">
-            Kurze Biographie? Platz um Copyright/Copyleft zu stellen. Kontaktmöglichkeiten Platz für die Symbole des Dokumentationszentrum
+        <main class="m-auto">
+            Kurze Biographie? Platz um Copyright/Copyleft zu stellen. Kontaktmöglichkeiten Platz für die Symbole des
+            Dokumentationszentrum
             Lichtenhagen und der Amadeu-Antonio-Stiftung
         </main>
     </body>
+
 </html>
