--- a/src/html/exhibits.html
+++ b/src/html/exhibits.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
+
     <head>
         <include src="./partials/head.html" locals='{"pathHeadPrefix": "../", "pageTitle": "Brotherland - Exhibits"}' />
     </head>
 
     <body class="bg-white text-gray-700">
         <header>
-            <include src="./partials/nav_header.html" locals='{"pathPrefix": "./", "active": "exhibits"}'></include>
+            <include src="./partials/nav.html" locals='{"pathPrefix": "./", "active": "exhibits"}'></include>
         </header>
 
-        <main class="m-auto sm:w-full md:w-4/5">Exhibits</main>
+        <main class="m-auto">Exhibits</main>
     </body>
+
 </html>
