--- a/src/html/interviews/intrvw_ia01.html
+++ b/src/html/interviews/intrvw_ia01.html
@@ -38,11 +38,11 @@ solange die Gruppe nicht gekommen, die gegen uns waren, die angeblich Nachfolger
     <body class="bg-white text-gray-700"
         onload="setParentElementHeight('interview-info'); imageHref('interview-image');">
         <header>
-            <include src="./partials/nav_header.html" locals='{"pathPrefix": "../", "active": "intrvw_ia01"}'></include>
+            <include src="./partials/nav.html" locals='{"pathPrefix": "../", "active": "intrvw_ia01"}'></include>
         </header>
 
         <!-- Main: -->
-        <main class="m-auto sm:w-full md:w-4/5">
+        <main class="m-auto ">
             <div id="top-container" class="pt-6">
                 <!-- Macou1 -->
                 <div id="macou1" class="flex flex-row flex-wrap">
