--- a/src/html/virtual-exhibits/ve3.html
+++ b/src/html/virtual-exhibits/ve3.html
@@ -8,36 +8,34 @@
 
     <body class="bg-white">
         <header>
-            <include src="./partials/nav_header.html" locals='{"pathPrefix": "../", "active": "yes"}'></include>
+            <include src="./partials/nav.html" locals='{"pathPrefix": "../", "active": "yes"}'></include>
         </header>
 
-        <main class="m-auto flex flex-col sm:w-full md:w-4/5 font-crimson-text font-semibold text-sm text-gray-900">
-            Virtual Exhibit 3
-
-            <div class="flex h-[40rem]">
-                <div class="relative flex min-h-min basis-1/2 flex-col justify-between pr-1">
+        <main class="m-auto flex flex-col font-crimson-text text-lg font-bold">
+            <div class="flex h-[76rem] pt-20">
+                <div class="relative flex h-full basis-1/2 flex-col justify-between pr-1">
                     <!-- Audio -->
-                    <div class="flex w-4/5 z-20 justify-center ">
+                    <div class="flex w-4/5 z-20 justify-center mb-36 py-8 px-2 bg-gray-900 rounded-sm">
                         <include src="./partials/interv_audio.html"
                             locals='{"audioFilePath": "../../../public/audio/01_wir_wollten_das_ja_letzten_Endes.mp3", "title": "wir wollten das ja letzten endes"}'>
                         </include>
                     </div>
 
                     <!-- Steine -->
-                    <div class="relative translate-x-8 z-10 h-4/5 overflow-hidden rounded-sm">
+                    <div class="relative translate-x-8 z-10 h-full overflow-hidden rounded-sm">
                         <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_015.jpg"
                             class="absolute h-full w-full object-cover" />
                     </div>
                 </div>
 
-                <div class="ml-1 mr-4 flex basis-1/2 flex-col justify-between items-center">
+                <div class="ml-1 mr-4 h-full flex basis-1/2 flex-col justify-between items-center">
                     <!-- Tauben-->
-                    <div class="relative h-full mt-16 w-full overflow-hidden rounded-sm">
+                    <div class="relative h-full pt-16 w-full overflow-hidden rounded-sm">
                         <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_014.jpg" class="absolute object-cover" />
                     </div>
 
                     <!-- Text "Meine Arbeit nehmen die.."  -->
-                    <span class="w-2/3 mt-16">
+                    <span class="w-3/5 mt-24">
                         „Meine Arbeit nehmen die mir jetzt
                         weg!“. Da hatte aber niemand mehr
                         Arbeit gehabt, weil alle waren ja
@@ -45,110 +43,104 @@
                         nicht mehr.
                     </span>
 
-                    <!-- Audio -->
-                    <div class="flex w-full justify-center ">
+                    <!-- Audio "wir wollten das ja letzten endes" -->
+                    <div class="flex justify-center w-1/4 py-8 px-2 bg-gray-900 rounded-sm">
                         <include src="./partials/interv_audio.html"
                             locals='{"audioFilePath": "../../../public/audio/01_wir_wollten_das_ja_letzten_Endes.mp3", "title": "wir wollten das ja letzten endes"}'>
                         </include>
                     </div>
-
-
                 </div>
             </div>
 
-            <div class="mt-12 flex h-[40rem]">
-                <div class="-mt-20 flex basis-1/2 flex-col justify-between pr-1">
-                    <!-- Hausecke; türkise Fenster -->
-                    <div class="relative mr-12 h-3/4 overflow-hidden rounded-sm">
-                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_08.jpg"
-                            class="absolute h-full w-full object-cover" />
-                    </div>
-
-                    <!-- Audio "Die kannten keine Schwarzen" -->
-                    <div class="mb-20 flex w-full justify-center">
+            <div class="pt-16 flex h-[70rem] -mr-32">
+                <div class="flex basis-2/5 flex-col justify-center pr-1">
+                    <!-- Audio "der Rassismus wurde noch stärker" -->
+                    <div class="flex w-4/5 py-8 px-2 justify-center bg-gray-900 rounded-sm">
                         <include src="./partials/interv_audio.html"
-                            locals='{"audioFilePath": "../../../public/audio/02_die_kannten_keine_Schwarzen.mp3", "title": ""}'>
+                            locals='{"audioFilePath": "../../../public/audio/03_der_rassismus_wurde_noch_stärker.mp3", "title": "der Rassismus wurde noch stärker"}'>
                         </include>
                     </div>
                 </div>
-                <div class="flex basis-1/2 flex-col justify-end pl-1">
-                    <!-- Feuerzeug -->
-                    <div class="relative ml-8 mt-24 h-3/4 overflow-hidden rounded-sm">
-                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_09.jpg"
+                <div class="flex basis-3/5 flex-col justify-start pl-1">
+                    <!-- Interviewpartner -->
+                    <div class="relative overflow-hidden h-full w-full rounded-sm">
+                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_016.jpg"
                             class="absolute h-full w-full object-cover" />
                     </div>
                 </div>
             </div>
 
-            <div class="flex h-[60rem] pt-14">
-                <div class="basis-2/3 pr-8 pb-24">
-                    <!-- Nahaufnahme Interviewpartner -->
-                    <div class="relative h-full overflow-hidden rounded-sm">
-                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_010.jpg"
-                            class="absolute h-full w-full object-cover" />
+            <div class="mt-24 relative">
+                <div class="absolute top-0 left-0 z-10 w-4/5 text-left text-7xl font-sans text-red-600">
+                    <span>DIE NEUE GRENZE WAR NICHT MEHR DIE MAUER, ES WAR DAS GELD</span>
+                    <!-- Audio "wir wollten das ja letzten endes" -->
+                    <div class="flex justify-center w-1/6 py-8 px-2 bg-gray-900 rounded-sm">
+                        <include src="./partials/interv_audio.html"
+                            locals='{"audioFilePath": "../../../public/audio/01_wir_wollten_das_ja_letzten_Endes.mp3", "title": "wir wollten das ja letzten endes"}'>
+                        </include>
                     </div>
                 </div>
-                <div class=" mt-auto basis-1/3">
-                    <!-- Text "Damals in der DDR hat man.."  -->
-                    <span>
-                        Damals in der DDR hat man gesagt, es gäbe keine Rassendiskriminierung. Aber für uns gab es die.
-                        Wenn wir in die
-                        Gaststätte gekommen sind, haben die Leute gesagt: “Mensch, jetzt wird es dunkel hier“, oder: „Es
-                        kommt die Kohle“.
-                        Und dann haben wir gemerkt, es geht um unserer [Haut]Farbe. Aber wir konnten nichts machen, wir
-                        wollten lernen und
-                        arbeiten
+                <div class="flex justify-center h-[60rem] pt-44">
+                    <div class="w-3/5">
+                        <!-- Nahaufnahme Interviewpartner -->
+                        <div class="relative h-full w-full overflow-hidden rounded-sm">
+                            <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_017.jpg"
+                                class="absolute h-full w-full object-cover" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="flex h-[60rem] -mx-20">
+                <div class="flex basis-1/2 flex-col justify-between pr-12">
+                    <!-- Fresse 1 -->
+                    <div class="relative h-full w-full overflow-hidden -mt-12 rounded-sm">
+                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_018.jpg" class="absolute object-cover" />
+                    </div>
+
+                    <!-- Text "Meine Arbeit nehmen die.."  -->
+                    <span class="w-3/5 mt-24 ml-20">
+                        Dass Deutschland einig wird, das hört
+                        man schon '89... vom Fernsehen und von
+                        der Straße, die Deutschen unterhalten
+                        sich manchmal. Ich hatte dafür keinen
+                        Kopf... Ich war jetzt arbeitslos, ich musste
+                        irgendwas versuchen um weiter Geld zu
+                        verdienen. Was ist mit mir jetzt, gehe
+                        ich nach Hause [Vietnam] oder gehe ich
+                        nicht. Wir hatten schon genug Probleme
+                        im Kopf mit unserer Situation...
                     </span>
                 </div>
-            </div>
 
-            <div class="flex h-[40rem] pt-24">
-                <div class="flex w-full flex-col justify-between">
-                    <!-- Schwimmbad -->
-                    <div class="relative h-full w-full overflow-hidden -mt-12 rounded-sm">
-                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_011.jpg" class="absolute object-cover" />
+                <div class="flex basis-1/2 flex-col justify-end pl-12 py-28 ">
+                    <!-- Fresse 2 -->
+                    <div class="relative h-3/5 w-full overflow-hidden rounded-sm">
+                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_019.jpg"
+                            class="absolute h-full w-full object-cover" />
                     </div>
 
-                    <!-- Audio unterhalb v. Schwimmbad -->
-                    <div class="-mb-16 flex w-full justify-center">
-                        <include src="./partials/interv_audio.html"
-                            locals='{"audioFilePath": "../../../public/audio/04_ein_freundschaftliches_verhältnis.mp3", "title": "ein freundschatliches Verhältnis"}'>
-                        </include>
-                    </div>
-                </div>
-
-                <div class="z-10 -mx-32 w-full pt-44">
-                    <!-- Audio zw. Schwimmbad & Datsche -->
-                    <div class="flex w-full justify-center">
-                        <include src="./partials/interv_audio.html"
-                            locals='{"audioFilePath": "../../../public/audio/03_du_hattest_gar_nicht_die_möglichkeit.mp3", "title": "du hattest gar nicht die Möglichkeit"}'>
-                        </include>
-                    </div>
-                </div>
-
-                <div class="w-full pt-32">
-                    <!-- Datsche -->
-                    <div class="relative h-full overflow-hidden rounded-sm">
-                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_012.jpg"
+                    <!-- Fresse 3 -->
+                    <div class="relative h-4/5 w-full overflow-hidden rounded-sm pt-20">
+                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_020.jpg"
                             class="absolute h-full w-full object-cover" />
                     </div>
                 </div>
+
+
             </div>
 
             <div class="relative mt-36 flex h-[60rem] w-full">
                 <div class="flex w-3/5 flex-col justify-between">
-                    <!-- Baum -->
-                    <div class="relative mt-44 h-full w-full overflow-hidden rounded-sm">
-                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_013.jpg"
-                            class="absolute h-full w-full object-cover" />
-                    </div>
+
                 </div>
 
                 <div class="flex w-2/5 flex-col items-start justify-start pl-4">
                     <div>
                         Keiner hat uns die Geschichte von Deutschland erzählt. Dann auf einmal kommt eine Gruppe von
                         Jugendlichen, die sagen
-                        sie sind die Nachfolger von Hitler. „Wir repräsentieren Hitler und Hitler hat die Menschen wie
+                        sie sind die Nachfolger von Hitler. „Wir repräsentieren Hitler und Hitler hat die Menschen
+                        wie
                         euch nicht gemocht“.
                     </div>
                     <div class="mt-4">„Warum?“</div>
