--- a/src/html/virtual-exhibits/ve3.html
+++ b/src/html/virtual-exhibits/ve3.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
-
     <head>
-        <include src="./partials/head.html"
-            locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - Virtual Exhibit 2"}' />
+        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - Virtual Exhibit 2"}' />
     </head>
 
     <body class="bg-white">
@@ -15,147 +13,156 @@
             <div class="flex h-[76rem] pt-20">
                 <div class="relative flex h-full basis-1/2 flex-col justify-between pr-1">
                     <!-- Audio -->
-                    <div class="flex w-4/5 z-20 justify-center mb-36 py-8 px-2 bg-gray-900 rounded-sm">
-                        <include src="./partials/interv_audio.html"
-                            locals='{"audioFilePath": "../../../public/audio/01_wir_wollten_das_ja_letzten_Endes.mp3", "title": "wir wollten das ja letzten endes"}'>
+                    <div class="z-20 mb-36 flex w-4/5 justify-center rounded-sm bg-gray-900 px-2 py-8">
+                        <include
+                            src="./partials/interv_audio.html"
+                            locals='{"audioFilePath": "../../../public/audio/01_wir_wollten_das_ja_letzten_Endes.mp3", "title": "wir wollten das ja letzten endes"}'
+                        >
                         </include>
                     </div>
 
                     <!-- Steine -->
-                    <div class="relative translate-x-8 z-10 h-full overflow-hidden rounded-sm">
-                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_015.jpg"
-                            class="absolute h-full w-full object-cover" />
+                    <div class="relative z-10 h-full translate-x-8 overflow-hidden rounded-sm">
+                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_015.jpg" class="absolute h-full w-full object-cover" />
                     </div>
                 </div>
 
-                <div class="ml-1 mr-4 h-full flex basis-1/2 flex-col justify-between items-center">
+                <div class="ml-1 mr-4 flex h-full basis-1/2 flex-col items-center justify-between">
                     <!-- Tauben-->
-                    <div class="relative h-full pt-16 w-full overflow-hidden rounded-sm">
+                    <div class="relative h-full w-full overflow-hidden rounded-sm pt-16">
                         <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_014.jpg" class="absolute object-cover" />
                     </div>
 
                     <!-- Text "Meine Arbeit nehmen die.."  -->
-                    <span class="w-3/5 mt-24">
-                        „Meine Arbeit nehmen die mir jetzt
-                        weg!“. Da hatte aber niemand mehr
-                        Arbeit gehabt, weil alle waren ja
-                        arbeitlsos. Die Arbeit gab's ja gar
-                        nicht mehr.
+                    <span class="mt-24 w-3/5">
+                        „Meine Arbeit nehmen die mir jetzt weg!“. Da hatte aber niemand mehr Arbeit gehabt, weil alle waren ja arbeitlsos.
+                        Die Arbeit gab's ja gar nicht mehr.
                     </span>
 
                     <!-- Audio "wir wollten das ja letzten endes" -->
-                    <div class="flex justify-center w-1/4 py-8 px-2 bg-gray-900 rounded-sm">
-                        <include src="./partials/interv_audio.html"
-                            locals='{"audioFilePath": "../../../public/audio/01_wir_wollten_das_ja_letzten_Endes.mp3", "title": "wir wollten das ja letzten endes"}'>
+                    <div class="flex w-1/4 justify-center rounded-sm bg-gray-900 px-2 py-8">
+                        <include
+                            src="./partials/interv_audio.html"
+                            locals='{"audioFilePath": "../../../public/audio/01_wir_wollten_das_ja_letzten_Endes.mp3", "title": "wir wollten das ja letzten endes"}'
+                        >
                         </include>
                     </div>
                 </div>
             </div>
 
-            <div class="pt-16 flex h-[70rem] -mr-32">
+            <div class="-mr-32 flex h-[70rem] pt-16">
                 <div class="flex basis-2/5 flex-col justify-center pr-1">
                     <!-- Audio "der Rassismus wurde noch stärker" -->
-                    <div class="flex w-4/5 py-8 px-2 justify-center bg-gray-900 rounded-sm">
-                        <include src="./partials/interv_audio.html"
-                            locals='{"audioFilePath": "../../../public/audio/03_der_rassismus_wurde_noch_stärker.mp3", "title": "der Rassismus wurde noch stärker"}'>
+                    <div class="flex w-4/5 justify-center rounded-sm bg-gray-900 px-2 py-8">
+                        <include
+                            src="./partials/interv_audio.html"
+                            locals='{"audioFilePath": "../../../public/audio/03_der_rassismus_wurde_noch_stärker.mp3", "title": "der Rassismus wurde noch stärker"}'
+                        >
                         </include>
                     </div>
                 </div>
                 <div class="flex basis-3/5 flex-col justify-start pl-1">
                     <!-- Interviewpartner -->
-                    <div class="relative overflow-hidden h-full w-full rounded-sm">
-                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_016.jpg"
-                            class="absolute h-full w-full object-cover" />
+                    <div class="relative h-full w-full overflow-hidden rounded-sm">
+                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_016.jpg" class="absolute h-full w-full object-cover" />
                     </div>
                 </div>
             </div>
 
-            <div class="mt-24 relative">
-                <div class="absolute top-0 left-0 z-10 w-4/5 text-left text-7xl font-sans text-red-600">
+            <div class="relative mt-24">
+                <div class="absolute left-0 top-0 z-10 w-4/5 text-left font-sans text-7xl text-red-600">
                     <span>DIE NEUE GRENZE WAR NICHT MEHR DIE MAUER, ES WAR DAS GELD</span>
+
                     <!-- Audio "wir wollten das ja letzten endes" -->
-                    <div class="flex justify-center w-1/6 py-8 px-2 bg-gray-900 rounded-sm">
-                        <include src="./partials/interv_audio.html"
-                            locals='{"audioFilePath": "../../../public/audio/01_wir_wollten_das_ja_letzten_Endes.mp3", "title": "wir wollten das ja letzten endes"}'>
+                    <div class="flex w-1/6 justify-center rounded-sm bg-gray-900 px-2 py-8">
+                        <include
+                            src="./partials/interv_audio.html"
+                            locals='{"audioFilePath": "../../../public/audio/01_wir_wollten_das_ja_letzten_Endes.mp3", "title": "wir wollten das ja letzten endes"}'
+                        >
                         </include>
                     </div>
                 </div>
-                <div class="flex justify-center h-[60rem] pt-44">
+                <div class="flex h-[60rem] justify-center pt-44">
                     <div class="w-3/5">
                         <!-- Nahaufnahme Interviewpartner -->
                         <div class="relative h-full w-full overflow-hidden rounded-sm">
-                            <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_017.jpg"
-                                class="absolute h-full w-full object-cover" />
+                            <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_017.jpg" class="absolute h-full w-full object-cover" />
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="flex h-[60rem] -mx-20">
+            <div class="-mx-20 flex h-[60rem]">
                 <div class="flex basis-1/2 flex-col justify-between pr-12">
                     <!-- Fresse 1 -->
-                    <div class="relative h-full w-full overflow-hidden -mt-12 rounded-sm">
+                    <div class="relative -mt-12 h-full w-full overflow-hidden rounded-sm">
                         <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_018.jpg" class="absolute object-cover" />
                     </div>
 
                     <!-- Text "Meine Arbeit nehmen die.."  -->
-                    <span class="w-3/5 mt-24 ml-20">
-                        Dass Deutschland einig wird, das hört
-                        man schon '89... vom Fernsehen und von
-                        der Straße, die Deutschen unterhalten
-                        sich manchmal. Ich hatte dafür keinen
-                        Kopf... Ich war jetzt arbeitslos, ich musste
-                        irgendwas versuchen um weiter Geld zu
-                        verdienen. Was ist mit mir jetzt, gehe
-                        ich nach Hause [Vietnam] oder gehe ich
-                        nicht. Wir hatten schon genug Probleme
-                        im Kopf mit unserer Situation...
+                    <span class="ml-20 mt-24 w-3/5">
+                        Dass Deutschland einig wird, das hört man schon '89... vom Fernsehen und von der Straße, die Deutschen unterhalten
+                        sich manchmal. Ich hatte dafür keinen Kopf... Ich war jetzt arbeitslos, ich musste irgendwas versuchen um weiter
+                        Geld zu verdienen. Was ist mit mir jetzt, gehe ich nach Hause [Vietnam] oder gehe ich nicht. Wir hatten schon genug
+                        Probleme im Kopf mit unserer Situation...
                     </span>
                 </div>
 
-                <div class="flex basis-1/2 flex-col justify-end pl-12 py-28 ">
+                <div class="flex basis-1/2 flex-col justify-end py-28 pl-12">
                     <!-- Fresse 2 -->
                     <div class="relative h-3/5 w-full overflow-hidden rounded-sm">
-                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_019.jpg"
-                            class="absolute h-full w-full object-cover" />
+                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_019.jpg" class="absolute h-full w-full object-cover" />
                     </div>
 
                     <!-- Fresse 3 -->
                     <div class="relative h-4/5 w-full overflow-hidden rounded-sm pt-20">
-                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_020.jpg"
-                            class="absolute h-full w-full object-cover" />
+                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_020.jpg" class="absolute h-full w-full object-cover" />
                     </div>
                 </div>
-
-
             </div>
 
-            <div class="relative mt-36 flex h-[60rem] w-full">
-                <div class="flex w-3/5 flex-col justify-between">
+            <div class="-mx-20 mt-32 flex h-[96rem]">
+                <div class="flex w-3/4 flex-col items-center justify-center pr-8">
+                    <div class="mt-auto h-3/4"></div>
 
+                    <!-- Autobrand -->
+                    <div class="relative h-full w-full overflow-hidden rounded-sm">
+                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_022.jpg" class="absolute object-cover" />
+                    </div>
+
+                    <div class="mb-auto h-1/3"></div>
                 </div>
 
-                <div class="flex w-2/5 flex-col items-start justify-start pl-4">
-                    <div>
-                        Keiner hat uns die Geschichte von Deutschland erzählt. Dann auf einmal kommt eine Gruppe von
-                        Jugendlichen, die sagen
-                        sie sind die Nachfolger von Hitler. „Wir repräsentieren Hitler und Hitler hat die Menschen
-                        wie
-                        euch nicht gemocht“.
+                <div class="-mr-8 flex w-fit flex-col justify-between">
+                    <!-- Bauzaun -->
+                    <div class="relative h-full w-full overflow-hidden rounded-sm">
+                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_021.jpg" class="absolute object-cover" />
+                        <div class="absolute m-auto h-full w-1/3 translate-x-2/3 translate-y-1/2">
+                            <!-- Audio "wir wollten das ja letzten endes" -->
+                            <div class="m-auto flex w-4/5 items-center justify-center rounded-sm bg-gray-900 px-2 py-8">
+                                <include
+                                    src="./partials/interv_audio.html"
+                                    locals='{"audioFilePath": "../../../public/audio/05_ich_dachte_ihr_seid_schon_weg.mp3", "title": "ich dachte ihr seid schon weg"}'
+                                >
+                                </include>
+                            </div>
+                        </div>
                     </div>
-                    <div class="mt-4">„Warum?“</div>
-                    <div class="z-10 -ml-[33rem] text-center text-7xl  font-sans text-red-600">
-                        WEIL DU
-                        SCHWARZ BIST
-                    </div>
-                    <div class="mt-4">Wir hatten Angst.</div>
-                    <div>Das war in Berlin 1982-1983.</div>
 
+                    <span class="mx-auto w-3/4 pt-32 text-left">
+                        Du warst als Erzieherin nicht mehr anerkannt. Das fand ich schon sehr prägend. Dann kamen wirklich welche von drüben
+                        und haben uns erstmal geschult. Wir mussten praktisch die Ausbildung nochmal neu machen damit wir überhaupt weiter
+                        arbeiten durften. Das fand ich so echt prägend und auch... auch so verletztend. Wir hatten ja eine gute Ausbildung,
+                        aber das hat auf einmal nicht mehr gezählt und mit welchem Recht? Das hast du einfach nicht verstanden. Und dann hat
+                        es auch nicht lange gedauert, dass du auf einmal entlassen wurdest. Das war dann kurz nach der Wende, da wurden ganz
+                        viele entlassen. Freunden, die nebenan bei uns hier gewohnt haben, die sind zu uns gekommen und dann haben wir alle
+                        zusammen erstmal geheult so ungefähr. Du hattest auf einmal Angst, Angst um deine Existenz, was machst du jetzt, wie
+                        geht es weiter... das ware wir nicht gewöhnt sowas.
+                    </span>
                 </div>
             </div>
             <br />
             <a href="./ve4.html" alt="Virtual Exhibit 4">Next: Virtual Exhibit 4</a>
         </main>
     </body>
-
 </html>
