--- a/src/html/virtual-exhibits/ve4.html
+++ b/src/html/virtual-exhibits/ve4.html
@@ -17,7 +17,7 @@
                         <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_023.jpg" class="absolute h-full w-full object-cover" />
                     </div>
 
-                    <!-- Audio -->
+                    <!-- Audio "das nahm ja so überhand" -->
                     <div class="z-20 mx-auto my-32 flex w-4/5 justify-center rounded-sm bg-gray-900 px-2 py-8">
                         <include
                             src="./partials/interv_audio.html"
@@ -69,11 +69,13 @@
             </div>
 
             <div class="flex-flex-col mt-24 w-full items-end justify-start">
-                <span class="ml-auto block w-1/3 text-left">Ich habe gesagt: „Keine Angst, wir sind versteckt in der Wohnung,</span>
+                <span class="ml-auto block w-1/3 text-left text-lg font-bold"
+                    >Ich habe gesagt: „Keine Angst, wir sind versteckt in der Wohnung,</span
+                >
                 <div class="mx-auto w-full pb-2 text-center font-sans text-7xl text-red-600">
                     <span>WIR KOMMEN NICHT RAUS</span>
                 </div>
-                <span class="ml-auto block w-1/3 text-left"
+                <span class="ml-auto block w-1/3 text-left text-lg font-bold"
                     >Die Gefahr war schon da, in den Wohnheimen, wo so viele Vietnamesen und Ausländer gesammelt gewohnt haben. Aber ich
                     hatte schon eine eigene Wohnung... da hatte ich Glück, in dem Fall. Die Nazis kommen nicht in die deutschen Blöcken. Nur
                     zu den Wohnheimen, den Ausländerwohnheimen, da kommen die hin. Das habe ich von unsere Leute gehört... es war schon eine
@@ -81,40 +83,42 @@
                 >
             </div>
 
-            <div class="-mt-24 flex h-[60rem] justify-start">
-                <div class="h-1/3 w-1/2">
-                    <!-- Nahaufnahme Interviewpartner -->
+            <div class="-mx-12 -mt-24 flex h-[60rem] justify-start">
+                <div class="h-2/5 w-1/2">
+                    <!-- Bus 1 -->
                     <div class="relative h-full w-full overflow-hidden rounded-sm">
                         <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_026.jpg" class="absolute h-full w-full object-cover" />
                     </div>
                 </div>
+                <div class="-ml-12 mt-60 h-2/5 w-1/2">
+                    <!-- Bus 2 -->
+                    <div class="relative h-full w-full overflow-hidden rounded-sm">
+                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_027.jpg" class="absolute h-full w-full object-cover" />
+                    </div>
+                </div>
             </div>
 
-            <div class="-mx-20 flex h-[60rem]">
+            <div class="-mx-20 -mt-56 flex h-[80rem]">
                 <div class="flex basis-1/2 flex-col justify-between pr-12">
-                    <!-- Fresse 1 -->
-                    <div class="relative -mt-12 h-full w-full overflow-hidden rounded-sm">
-                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_018.jpg" class="absolute object-cover" />
+                    <!-- Flagge -->
+                    <div class="relative h-full w-full overflow-hidden rounded-sm">
+                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_028.jpg" class="absolute object-cover" />
                     </div>
-
-                    <!-- Text "Meine Arbeit nehmen die.."  -->
-                    <span class="ml-20 mt-24 w-3/5">
-                        Dass Deutschland einig wird, das hört man schon '89... vom Fernsehen und von der Straße, die Deutschen unterhalten
-                        sich manchmal. Ich hatte dafür keinen Kopf... Ich war jetzt arbeitslos, ich musste irgendwas versuchen um weiter
-                        Geld zu verdienen. Was ist mit mir jetzt, gehe ich nach Hause [Vietnam] oder gehe ich nicht. Wir hatten schon genug
-                        Probleme im Kopf mit unserer Situation...
-                    </span>
                 </div>
 
-                <div class="flex basis-1/2 flex-col justify-end py-28 pl-12">
-                    <!-- Fresse 2 -->
-                    <div class="relative h-3/5 w-full overflow-hidden rounded-sm">
-                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_019.jpg" class="absolute h-full w-full object-cover" />
+                <div class="relative flex w-1/2 flex-col justify-end pl-12">
+                    <!-- Sonnenblume -->
+                    <div class="relative h-2/3 w-full overflow-hidden rounded-sm">
+                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_029.jpg" class="absolute h-full w-full object-cover" />
                     </div>
 
-                    <!-- Fresse 3 -->
-                    <div class="relative h-4/5 w-full overflow-hidden rounded-sm pt-20">
-                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_020.jpg" class="absolute h-full w-full object-cover" />
+                    <!-- Audio -->
+                    <div class="absolute bottom-0 z-20 -mb-12 ml-12 flex w-4/5 justify-center rounded-sm bg-gray-900 px-2 py-8">
+                        <include
+                            src="./partials/interv_audio.html"
+                            locals='{"audioFilePath": "../../../public/audio/02_das_nahm_ja_so_Überhand.mp3", "title": "das nahm ja so Überhand"}'
+                        >
+                        </include>
                     </div>
                 </div>
             </div>
