--- a/src/html/book.html
+++ b/src/html/book.html
@@ -10,7 +10,12 @@
             <include src="./partials/nav.html" locals='{"pathPrefix": "./", "active": "book"}'></include>
         </header>
 
-        <main class="m-auto">Coming soon</main>
+        <main class="m-auto">
+            <div class="flex flex-col justify-start items-center">
+                <div>Ein Foto-Text-Buch mit mehr Interviews,
+                    Fotos und Archivmaterial ist in Arbeit.</div>
+            </div>
+        </main>
     </body>
 
 </html>
