--- a/src/html/about.html
+++ b/src/html/about.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
     <head>
         <include src="./partials/head.html" locals='{"pathHeadPrefix": "../", "pageTitle": "Brotherland - Project"}' />
     </head>
@@ -11,10 +10,61 @@
         </header>
 
         <main class="m-auto">
-            Kurze Biographie? Platz um Copyright/Copyleft zu stellen. Kontaktmöglichkeiten Platz für die Symbole des
-            Dokumentationszentrum
-            Lichtenhagen und der Amadeu-Antonio-Stiftung
+            <div class="flex h-full w-full items-start justify-between">
+                <div class="flex h-fit w-1/2 flex-col justify-start pr-6">
+                    <p class="font-playfair-display font-bold text-red-800">
+                        Brotherland ist ein Projekt von Martina Zaninelli und Thomas Jacobs
+                    </p>
+
+                    <p class="font-playfair-display font-bold text-red-800 underline">Exhibitions & Nominations</p>
+                    <div class="h-4"></div>
+
+                    <div>2023 – Photomatch, Fotofestiwal – Lodz, PL</div>
+                    <div>2022 – Longlisted, Format Festival – Derby, UK</div>
+                    <div>
+                        2022 – Gedenken - Aufklären – Gestalten: 30 Jahre nach dem rassistischen Pogrom in Rostock Lichtenhagen, Stadthalle
+                        – Rostock
+                    </div>
+                    <div>2022 – Pop-Up Ausstellung, Mahalle – Berlin</div>
+                    <div>2022 – Pop-Up Ausstellung, Fusion Festival – Lärz</div>
+                    <div>2022 – Book Nook, Rucka Art – Cesis, LV</div>
+                    <div>2022 – Solo-Exhibition, Peter-Weiss-Haus – Rostock</div>
+                    <div>2022 – Solo-Exhibition, Hors les Murs, Maison de Heidelberg – Montpellier, FR</div>
+                    <div>2022 – Video Projections, Les Boutographies – Montpellier, FR</div>
+                    <div>2022 – Pop-Up Ausstellung – Dresden</div>
+                    <div>2021 – Portfolio Reviews, Encontros da Imagem – Braga, PT</div>
+                    <div>2021 – Landscapes of the Futures, Castelnuovo Fotografia – Castelnuovo di Porto, Rom, IT</div>
+                </div>
+
+                <div class="h-96 w-1/2 pl-6">
+                    <p class="font-playfair-display font-bold text-red-800 underline">Kontakt</p>
+                    <span><a href="mailto:brotherland@riseup.net">brotherland@riseup.net</a></span>
+                    <div class="h-4"></div>
+
+                    <p class="font-playfair-display font-bold text-red-800 underline">Biographien</p>
+                    <p>
+                        Martina macht die Fotos, Thomas stellt die Fragen. Gemeinsam haben sie Brotherland konzipiert und arbeiten seit über
+                        zwei Jahren daran. Martina ist in Italien geboren und aufgewachsen. Thomas ist in einem Staat geboren und
+                        aufgewachsen, den es nicht mehr gibt, der DDR. Beide leben jetzt in Berlin. Martina hat einen BA in Moderner und
+                        Zeitgenössischer Geschichte und besuchte Lisa Barnards Masterclass an der ISSP. Thomas hat als Straßenpädagoge und
+                        Erzieher gearbeitet. Jetzt arbeiten beide - im Berliner Nachtleben - als Türsteher. Ihr Projekt Brotherland wurde
+                        bei Castelnuovo Fotografia (Italien), Les Boutographies (Frankreich) und Fusion Festival ausgestellt, kam auf die
+                        Longlist für das Format Festival und wurde in verschiedenen Städten in Deutschland wie Rostock, Dresden und Berlin
+                        ausgestellt.
+                    </p>
+                    <div class="h-4"></div>
+                    <div>Die Realisierung der Webseite wurde ermöglicht dank der Förderung der</div>
+                    <!-- AAS -->
+                    <div class="relative h-full w-full overflow-hidden rounded-sm">
+                        <img src="/public/images/Logo-AAS-1.jpg" class="absolute h-fit w-full object-cover" />
+                    </div>
+                    <div>und mit der Untersützung der Soziale Bildung e.V. / Dokumentationszentrum „Lichtenhagen im Gedächtnis“</div>
+                    <!-- Dokumentationszentrum -->
+                    <div class="relative h-full w-full overflow-hidden rounded-sm">
+                        <img src="/public/images/dokzentrum-logo.jpg" class="absolute h-fit w-full object-cover" />
+                    </div>
+                </div>
+            </div>
         </main>
     </body>
-
 </html>
